<resources>
    <string name="app_name">Atlas</string>
    <string name="app_edition">community edition</string>
    <string name="app_release">Release 1.0 beta</string>
    <string name="app_update">December 21, 2018</string>
    <string name="app_publisher">Published by kids (a)cademy</string>
    <string name="content_license">public domain knowledge</string>
    <string name="app_logotype">App Logotype</string>
    <string name="app_description">App Description</string>
    <string name="app_about">App About</string>
    <string name="app_about_caption">About Atlas</string>
    <string name="app_rate_caption">Rate Atlas</string>
    <string name="app_share_caption">Share Atlas</string>
    <string name="feature_lifespan">Lifespan</string>
    <string name="feature_lifespan_captivity">Lifespan in Captivity</string>
    <string name="feature_wingspan">Wingspan</string>
    <string name="feature_length">Length</string>
    <string name="feature_length_bill">Bill Size</string>
    <string name="feature_length_tail">Tail Length</string>
    <string name="feature_height">Height</string>
    <string name="feature_weight">Weight</string>
    <string name="feature_speed">Speed</string>
    <string name="feature_speed_gliding">Gliding Speed</string>
    <string name="feature_speed_diving">Diving Speed</string>
    <string name="reader_column_separator">:</string>
    <string name="conservation_label_LC">Least Concern</string>
    <string name="conservation_label_NT">Near Threatened</string>
    <string name="conservation_label_VU">Vulnerable</string>
    <string name="conservation_label_EN">Endangered</string>
    <string name="conservation_label_CR">Critically Endangered</string>
    <string name="conservation_label_EW">Extinct In The Wild</string>
    <string name="conservation_label_EX">Extinct</string>
    <string name="conservation_label_NA">Not Available</string>
    <string name="conservation_bullet_LC">LC</string>
    <string name="conservation_bullet_NT">NT</string>
    <string name="conservation_bullet_VU">VU</string>
    <string name="conservation_bullet_EN">EN</string>
    <string name="conservation_bullet_CR">CR</string>
    <string name="conservation_bullet_EW">EW</string>
    <string name="conservation_bullet_EX">EX</string>
    <string name="conservation_bullet_NA">NA</string>
    <string name="infobox_last_updated">Last updated</string>
    <string name="infobox_classification">Classification</string>
    <string name="infobox_progenitor">Manufacturer</string>
    <string name="infobox_alias">Also known as</string>
    <string name="infobox_since">Dates back to</string>
    <string name="infobox_period">Period</string>
    <string name="infobox_spreading">Spreading</string>
    <string name="reader_related">Related</string>
    <string name="reader_links">Sources</string>
    <string name="search">search</string>
    <string name="about_vision">Atlas is a quick reference on a particular subject</string>
    <string name="about_atlas">This application is a release from a collection named Atlas. Perhaps the name is pretentious or even misleading. Is not on purpose. We really did not found a better one.</string>
    <string name="about_atlas_intent">Atlas is focused on facts, with reasonable text and media content. It is not meant to be exhaustive but rather to be used as a quick reference on a particular subject or field. For complete reference one can visit linked external sources.</string>
    <string name="about_open_source">Atlas is a community, open source project. Source code can be found on GitHub. Atlas articles are updated by contributors on kids (a)cademy site.</string>
    <string name="about_license_heading">Apache License 2.0</string>
    <string name="about_license">Atlas is distributed under Apache License 2.0, the same used by Android. This basically means anyone can do anything with application and sources but no warranty from kids (a)cademy. Source code on https://github.com/kids-cademy/</string>
    <string name="about_free">Atlas is completely free. Free of annoying ads, no misleading in-app payment, no spy-ware. Development effort is donated. It is a humble way to show gratitude to Internet community that gives us all so much.</string>
    <string name="rate_on_store">Click here to rate on Google Play Store!</string>
    <string name="rate_review">Google ranking uses reviews.\n\nHelp increasing atlas visibility by writing reviews!</string>
    <string name="rate_improving">We invest substantial effort to ensure atlas quality, but still there may be mistakes.\n\nHelp us improving and spread the word!</string>
    <string name="rate_suggestion">If found something not reasonable please use\ncontact@kids-cademy.com\nto send us corrections.\n\nSuggestions for improvement are also welcomed.</string>
    <string name="help_caption">User Guide</string>
    <string name="help_overview">Overview</string>
    <string name="help_main_menu">Main Menu</string>
    <string name="help_atlas_reader">Atlas Reader</string>
    <string name="help_atlas_search">Atlas Search</string>
    <string name="help_atlas_index">Atlas Index</string>
    <string name="help_browser_sync">Browser Sync</string>
    <string name="help_previous_article">Previous Article</string>
    <string name="help_next_article">Next Article</string>
    <string name="help_swap_order">Swap Order</string>
    <string name="help_collapse_all">Collapse All</string>
    <string name="help_expand_all">Expand All</string>
    <string name="help_overview_p1">Atlas is a collection of related articles. An article displays a particular object, focusing on facts, with reasonable text and media content.</string>
    <string name="help_overview_p2">Atlas can be used as a quick reference on a particular subject or field and search is its primary mean to locate articles.</string>
    <string name="help_overview_p3">There is also an atlas index, sorted alphabetically. It can be used to browse articles collection.</string>
    <string name="help_overview_p4">Atlas user interface supports both mobile phones and tables. Phones are used in portrait mode and tables in landscapes.</string>
    <string name="help_overview_p5">Atlas is organized into pages that can be opened using action icons. Every page has a back arrow that allow to go back to previous pages.</string>
    <string name="help_overview_p6">From cover page, that is opened at atlas launch, go to main menu by pressing forward arrow from title bar. From main menu can go to every atlas page.</string>
    <string name="help_overview_p7">Atlas has also an embedded server that allows to read articles from an external, large screen, browser. See browser sync.</string>
    <string name="help_overview_p8">Atlas articles are displayed on a reader. Reader uses vertical scroll on mobile phones and horizontal on tablets.</string>
    <string name="help_overview_p9">Reader has options to go to next and previous article, to jump to related ones or to open external resources.</string>
    <string name="help_menu_description">Main menu page is opened from cover page and has links to all atlas pages. There are two groups of icons: core atlas actions and support actions.</string>
    <string name="help_atlas_actions_h">Core Atlas Actions</string>
    <string name="help_atlas_actions_p1">Core atlas icons are bigger. This group is the main actions group containing links to atlas related pages.</string>
    <string name="help_atlas_actions_p2">Usually use search page to locate atlas article but index page can be handy to browse all items from collection.</string>
    <string name="help_atlas_actions_p3">See related user guide sections for main atlas actions.</string>
    <string name="help_support_actions_h">Support Actions</string>
    <string name="help_support_actions_p1">Support icons group are on page bottom side and are smaller.</string>
    <string name="help_support_actions_p2">This actions group is auxiliary and has links to this user guide and support pages.</string>
    <string name="help_support_actions_p3">Support actions provides means to share and rate the atlas.</string>
    <string name="help_reader_description">Atlas reader displays atlas articles, focused on facts, with reasonable amount of text and media content. It also has links to related articles and external sources.</string>
    <string name="help_reader_p1">Reader\'s page is organized into sections and uses vertical scroll on mobile phones and horizontal scroll on tablets.</string>
    <string name="help_reader_p2">Although reader has different user interfaces for mobile phones and tablets, article content is the same.</string>
    <string name="help_reader_actions_h">On reader actions bar there are icons for:</string>
    <string name="help_reader_actions_p1">go to search and index pages to locate another article</string>
    <string name="help_reader_actions_p2">navigate to next and previous article from collection, in alphabetical order</string>
    <string name="help_reader_actions_p3">enable / disable browser synchronization for article view on external large screen</string>
    <string name="help_reader_actions_p4">go to atlas main menu</string>
    <string name="help_search_description">Search is the primary mean to locate atlas articles. Current implementation is not Google Search but is pretty decent.</string>
    <string name="help_search_p1">Search is performed on words, that is, partial word searching is not supported. This is not a so much limitation because there is auto-suggestion, updated for every user input. Anyway, there still is a limitation: search does not support multiple words.</string>
    <string name="help_search_p2">Search happens in two steps:</string>
    <string name="help_search_p21">collect user input and suggest relevant keywords</string>
    <string name="help_search_p22">uses selected keyword to actually locate atlas article</string>
    <string name="help_search_p3">Search result page usually has more articles, sorted by relevance. Just click on desired one to open atlas reader. If not desired article press back from reader to go back to search result page.</string>
    <string name="help_search_p4">From search pages, both input and results, can go to atlas index and main menu.</string>
    <string name="help_search_p5">Search algorithm uses a standard search index, generated at build phase, for every atlas release. The trick is it uses different keyword relevance for article entities like titles, definitions, descriptions, image captions, related names, etc. It is classified by Wikipedia as vertical search.</string>
    <string name="help_index_description">Atlas index is sorted alphabetically and can be used to browse entire articles collection. Every article from index has name, icon and a short excerpt from article definition.</string>
    <string name="help_index_p1">Index page is organized into collapsible sections, grouped by first letter from article name. Sections are ordered alphabetically.</string>
    <string name="menu_help_reader">Atlas Reader</string>
    <string name="menu_help_search">Atlas Search</string>
    <string name="menu_help_index">Atlas Index</string>
    <string name="menu_help_sync">Browser Sync</string>
    <string name="menu_help_accessibility">Accessibility Mode</string>
    <string name="menu_help_user_guide">User Guide</string>
    <string name="menu_help_about">About Atlas</string>
    <string name="menu_help_share">Share Atlas</string>
    <string name="menu_help_rate">Rate Atlas</string>
    <string name="menu_help_close">Close Atlas</string>
    <string name="sync_stop_button">Stop</string>
    <string name="sync_stop_message_1">Your browser is in sync.</string>
    <string name="sync_stop_message_2">If you no longer use atlas reader on browser is recommended to stop synchronization.</string>
    <string name="image_description">image</string>
</resources>