<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#00BCD4"
    tools:parentTag="android.support.constraint.ConstraintLayout">

    <TextView
        android:id="@+id/sync_stop_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_solid_circle"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/sync_stop_message_1"
        android:textAppearance="@style/TextAppearance.Small"
        app:backgroundTint="#2196F3"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.36" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:padding="@dimen/textbox_padding"
        android:text="@string/sync_stop_message_2"
        android:textAppearance="@style/TextAppearance.Small"
        app:layout_constraintBottom_toBottomOf="@+id/sync_stop_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sync_stop_message"
        app:layout_constraintTop_toTopOf="@+id/sync_stop_message" />

    <TextView
        android:id="@+id/sync_stop_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_solid_circle"
        android:gravity="center"
        android:text="@string/sync_stop_button"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Large"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toTopOf="@id/sync_stop_devices"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sync_stop_devices"
        app:layout_constraintVertical_bias="0.85" />

    <com.kidscademy.atlas.view.SyncDevicesView
        android:id="@+id/sync_stop_devices"
        layout="@layout/compo_sync_devices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:inSync="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent" />

</merge>